# math

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: 001_functions_and_derivatives.html  002_integrals_and_area.html  004_set_theory.html  005_advanced_sets_and_functions.html  index.html
notebooks/: 001_functions_and_derivatives.py  002_integrals_and_area.py  003_multivariable_functions.py  004_set_theory.py  005_advanced_sets_and_functions.py  006_probability.py  007_trigonometry.py
scripts/: export_notebooks.sh
src/math_explorations/: __init__.py  export.py
src/math_explorations/calculus/: __init__.py  derivatives.py  limits.py
src/math_explorations/visualization/: __init__.py  animations.py  function_plots.py  styles.py
tests/e2e/: test_notebooks.py
